[tool.poetry]
name = "covizpy"
version = "1.0.1"
description = "Provides access to Covid-19 data from Our World in Data, and functions to generate relevant charts and summaries."
authors = ["Rohit Rawat, Rong Li, Thomas Siu, Ting Zhe Yan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
altair = "^4.2.0"
altair-saver = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
altair-data-server = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
